# pc4store-py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
examples/async/: create.py  create_order.py  create_transfer.py  get_order.py  get_transfer.py  info.py  verify.py
examples/sync/: create.py  create_order.py  create_transfer.py  get_currencies.py  get_fiat_methods.py  get_order.py  get_transfer.py  info.py  verify.py
pc4store/: __init__.py  config.py  data.py
pc4store/clients/: __init__.py  asynchronous.py  base.py  sync.py
pc4store/schema/: __init__.py  currency.py  enums.py  exceptions.py  fiat.py  order.py  transfer.py
tests/: data.py  test_base_client.py  test_inputs.py  test_sync_client.py
tests/sync/: test_check_sign.py  test_create_get_order.py  test_create_get_transfer.py  test_get_methods.py
tests/utils/: fabrics.py  fixtures.py
