[tool.poetry]
name = "pc4store"
version = "3.1.1"
description = "Python lib for integration with pc4store payment system"
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "pc4store"}]

[tool.poetry.dependencies]
python = ">=3.9"
cryptography = ">=3.4.5"
pydantic = ">=2.0.0, <3.0.0"
httpx = ">=0.24.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.0"
respx = ">=0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
